# warehouse-relocator

./: .env.example  .gitignore  DEPLOY.md  INFRASTRUCTURE.md  Makefile  README.md  alembic.ini  deploy.sh  dev.db-shm  docker-compose.yml  pyproject.toml  sitecustomize.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00bac1be7b25_load_models_metadata.py  0811d79a9755_add_native_core_tables.py  1047c3249730_rename_date_fields_add_tablenames.py  1feb460218b3_fix_analysis_relationships.py  487d69608b0d_fix_analysis_relationships.py  515dcbcd5cb9_switch_to_sa2_typed_models.py  f123ea3eaf2d_initial_schema.py  (+4 more)
app/: api.py  main.py
backend/: .dockerignore  Dockerfile  MOVE_SORTING.md  RELOCATION_SUMMARY.md  dev.db-shm  dev.db-wal  entrypoint.sh  pyproject.toml  pytest.ini  repro_test.py  requirements.txt  sitecustomize.py  test_repro.db
backend/alembic/: env.py
backend/alembic/versions/: 377130333335_baseline_all_tables.py  425357a7886b_ship_tx_fk_to_sku_id_only.py  a74f1cde4037_add_lot_date_to_inventory.py
backend/app/: main.py
backend/app/core/: celery_app.py  database.py
backend/app/models/: __init__.py  flow.py  inventory.py  location_master.py  metrics.py  sku.py
backend/app/routers/: debug.py  upload.py
backend/app/services/: ai_planner.py  analysis_tasks.py  ingestion.py  metrics.py  optimizer.py  relocation_tasks.py
backend/app/utils/: file_parser.py
backend/logs/: ai_planner.jsonl
backend/tests/: conftest.py  test_consolidate.py  test_file_parser.py  test_ingestion.py  test_level_vol_cap.py  test_move_chain.py  test_multi_sku_coexistence.py  test_pass_fifo_to_pick.py  test_upload_sku.py
backend/tests/data/: 20250806 ハイネスロケ一覧.xlsx - Bネス有効ロケ.csv  _.csv  sku_cp932.csv  sku_sample.csv  入荷実績_20250722.csv  入荷実績_20250722_2.csv  出荷実績_20250722.csv  在庫データ.csv
backend/venv_new/: pyvenv.cfg
data/: warehouse_relocator.db
frontend/: README.md  dev_log.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json
warehouse-optimizer_testdata/: 20250806 ハイネスロケ一覧.xlsx - ハイネスロケ.csv  20250806 ハイネスロケ一覧.xlsx - 無効化したロケ一覧.csv  sku.csv  sku1.csv  入荷実績_20251222.csv  入荷実績_20260119.csv  出荷実績_20251223.csv
webui/: analysis.html  analysis.js  index.html  main.js  master.js  master_upload.html  style.css
(+62 files in other folders)
