[project]
name = "warehouse-relocator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "pandas>=2.3.1,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "scikit-learn>=1.7.1,<2.0.0",
  "ortools>=9.14.6206,<10.0.0",
  "networkx>=3.5,<4.0",
  "fastapi>=0.116.1,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "python-multipart>=0.0.20,<0.0.21",
  "streamlit>=1.47.1,<2.0.0",
  "duckdb>=0.10.0,<1.0.0; python_version < '3.13'",
  "sqlmodel>=0.0.16,<0.1.0",
  "alembic>=1.13,<2.0.0",
  "sqlalchemy>=2.0.30,<2.1",
  "pydantic>=2.7,<3.0",
  "alembic>=1.13,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
